<resources>
    <string name="app_name">HiretoWork</string>
    <string name="image">image</string>
    <string name="heading">Find Local Professionals For Pretty Much Anything.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">I forgot my password !</string>
    <string name="signup_text">Don\'t have an account ? Signup</string>
    <string name="client_signup">Create A Client Account</string>
    <string name="pro_account">Create A Pro Account</string>

    <string name="create_a_client_account">Create A Client Account</string>
    <string name="create_a_pro_account">Create A Pro Account</string>
    <string name="full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_contact">Contact No.</string>
    <string name="hint_company">Company</string>
    <string name="conf_password">Confirm Password</string>
    <string name="hint_terms_condition"><![CDATA[I accept all Terms & Conditions]]></string>
    <string name="register">Sign-up</string>
    <string name="already_hint">Already A Member ? Login</string>
    <string name="location">Location</string>
    <string name="filter">Filter</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="review">Review</string>
    <string name="submit_confirm_message">submit</string>
    <string name="submit_confirm_button">submit</string>
    <string name="finish">finish</string>
    <string name="next">Next</string>
    <string name="post">Post</string>
    <string name="where_do_you_need_the_webdesigner">Where do you need the webdesigner ?</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="page2_head">What would you like done ?</string>
    <string name="new_website">New Website</string>
    <string name="existing_web">Change to my existing website</string>
    <string name="personal_website">Personal Website</string>
    <string name="blog_page">Blog</string>
    <string name="social_website">Social Networking / Community</string>
    <string name="ecommerse_web">E-Commerce</string>
    <string name="business_Web">Business or Non-Profit</string>
    <string name="page4_head">What type of website do you have / would like ?</string>
    <string name="page5_head">Please select your preferred website program</string>
    <string name="page6_head">Will you provide the web-designer with the content of your site(Images,written content, etc) ?</string>
    <string name="page7_head">How would you like to meet with the web-designer ?</string>
</resources>
