<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".activities.main.EnterSignupActivity">

    <include layout="@layout/header_logo"/>

    <Button
        android:id="@+id/client_signup_btn"
        android:textSize="@dimen/semi_medium_font"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/client_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_trans"/>

    <Button
        android:id="@+id/pro_signup_btn"
        android:textSize="@dimen/semi_medium_font"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/pro_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#90009fd9"/>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textview_login"
        android:textColorLink="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/already_hint"
        android:textSize="@dimen/semi_medium_font" />


</LinearLayout>